# pwr-hadoop

./: .gitignore  Makefile  README.md  docker-compose.yml
hadoop/: Makefile  README.md
hadoop/jobs/: WordCount.java
jobs/: WordCount.java
spark/: README.md  pyproject.toml
spark/notebooks/: Spark.ipynb  e0_rdd.ipynb  e1_sql.ipynb
spark/notebooks/databricks/: lab12_zmienne.ipynb  lab13.ipynb  lab14.ipynb  project_template.ipynb
submit/: run.sh
