[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["Norbert Kozlowski <norbert.kozlowski@pwr.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.4"
findspark = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
